# resume_generator

./: Cargo.toml  README.md
src/: cli.rs  main.rs  resume.rs
src/pdf/: image.rs  mod.rs  shape.rs  text.rs  timeline.rs
src/pdf/font_awesome/: fonts.rs  mod.rs
