[package]
name = 'resume-generator'
version = '0.1.0'
authors = ['Pedro Mangabeira <pedro.mangabeiralindekrantz@gmail.com>']
edition = '2018'

[dependencies]
log = '0.4'
serde_json = '1'
structopt = '0.3'
clap-verbosity-flag = '0.3'
printpdf = '0.3'
toml = '0.5'
lazy_static = '1.4'
qrcode-generator = '1.0'
textwrap = '0.11'
relative-path = '1'

[dependencies.chrono]
version = '0.4'
features = ['serde']

[dependencies.serde]
version = '1'
features = ['derive']

[dependencies.simple_logger]
version = '1.6'
default-features = false
features = ['colored']
[profile.release]
opt-level = 's'
